--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Simple React App</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,700,1,200"
+    />
   </head>
   <body>
     <div id="root"></div>
